* Changelog
** Unreleased

- [[https://github.com/r0man/sablono/pull/188/files][#188]] Optimize more forms.
- [[https://github.com/r0man/sablono/pull/185][#185]] Fix test-element-meta test.

** 0.8.3

- [[https://github.com/r0man/sablono/pull/181][#181]] Update React to =16.2.0=.

** 0.8.2

- [[https://github.com/r0man/sablono/pull/183][#183]] Allow non strings as :value.
- [[https://github.com/r0man/sablono/pull/180][#180]] Update dependencies.

** 0.8.1

- [[https://github.com/r0man/sablono/pull/174][#174]] Update React to =15.6.1=.
- [[https://github.com/r0man/sablono/pull/167][#167]] Update React to =15.5.0-0= and get rid of =React.createClass=.

** 0.8.0

- [[https://github.com/r0man/sablono/pull/165][#165]] Remove lein-npm from development dependencies.
- [[https://github.com/r0man/sablono/issues/158][#158]] Fix camel-case bug in :style attributes and handle nil in =interpreter/atributes=.
- [[https://github.com/r0man/sablono/pull/152][#152]] Don't coerce nil/undefined input :value to be consistent with React.
- [[https://github.com/r0man/sablono/pull/149][#149]] Force lazy seq in interpret-seq to be realized.
- [[https://github.com/r0man/sablono/pull/146][#146]] Keep state and props of inputs synchronized.
- [[https://github.com/r0man/sablono/issues/140][#140]] Don't loose focus when switching from an uncontrolled to a
  controlled input.

** 0.7.7

- [[https://github.com/r0man/sablono/pull/133][#133]] Improve performance by using transducers.
- [[https://github.com/r0man/sablono/issues/141][#141]] Fix =^:inline= hint for elements without attributes.

** 0.7.6

- [[https://github.com/r0man/sablono/pull/135][#135]] Skip interpretation when using the =:inline= type hint.
- [[https://github.com/r0man/sablono/pull/134][#134]] Use the Tubax library to parse HTML in the tests and run them
  on Node.

** 0.7.5

- [[https://github.com/r0man/sablono/pull/132][#132]] Don’t join nil classes into classes string (#132)